pl-fe: fix 'light mode contrast on menu bar items kinda sucks'

--- a/packages/pl-fe/src/styles/new/layout.scss
+++ b/packages/pl-fe/src/styles/new/layout.scss
@@ -221,7 +221,7 @@ body {
   }
 
   &:not(&--active) {
-    @apply text-gray-500 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200;
+    @apply text-gray-700 hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-200;
 
     .⁂-sidebar-navigation-link__icon {
       @apply bg-primary-50 dark:bg-gray-900;
